Patterns updated